<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CamNav</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="navigateButtonString">Next</string>
    <string name="contactNumberHintString">Enter Contact Number</string>
    <string name="enterNameString">Enter Name</string>
    <string name="welcomeString">Welcome</string>
    <string name="taxiRadioString">Taxi Stand</string>
    <string name="metroRadioString">Metro Station</string>
    <string name="busRadioString">Bus Stop</string>
    <string name="title_activity_beta">Beta</string>
    <string name="BetaDestinationHintString">Enter Destination</string>
    <string name="betaStartHintString">Pull Current Location (soon)</string>
    <string name="betaIntentDataString">Large Text</string>
    <string name="betaButton">MAP</string>
    <string name="betaTextIntentData">Medium Text</string>
    <string name="betaStartlocationlongString">Small Text</string>
    <string name="betaStartLocationLatString">Small Text</string>
    <string name="beta_provider">Small Text</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_new_map">NewMapActivity</string>
    <string name="title_activity_gamma">Gamma</string>
    <string name="getPlacesString">New Button</string>
    <string name="getPlacesString2">Get Places</string>
    <string name="gammaText">Large Text</string>
    <string name="getRouteString">Get Route</string>
    <string name="mapTextString">Medium Text</string>
    <string name="cameraButtonNavigateString">Navigate</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="textview_text">SeekBarPreference test</string>

    <string name="menu_settings">Settings</string>
    <string name="settings_dialog_message">Set your preferred walking radius</string>
    <string name="settings_summary">Current value is $1</string>
    <string name="settings_unit">Km</string>
    <string name="settings_title">Walking Radius</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="betaCardTextUserLocation">There you are on the map</string>

</resources>
