<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parentLayout"
    android:background="#000">


       <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />


    <android.support.v4.widget.DrawerLayout
        android:layout_below="@+id/app_bar"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#C0D6DF"
            >
            <TextView
                android:id="@+id/textView"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/welcomeString"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editNumberText"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/metroRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/metroRadioString" />

                <RadioButton
                    android:id="@+id/taxiRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/taxiRadioString" />

                <RadioButton
                    android:id="@+id/busRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/busRadioString" />
            </RadioGroup>

            <EditText
                android:id="@+id/enterNameText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/editNumberText"
                android:layout_below="@+id/textView"
                android:layout_marginTop="62dp"
                android:gravity="center_horizontal"
                android:hint="@string/enterNameString" />

            <EditText
                android:id="@+id/editNumberText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/enterNameText"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:hint="@string/contactNumberHintString"
                android:inputType="phone" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="73dp"
                android:onClick="onClick"
                android:text="@string/navigateButtonString" />
            </RelativeLayout>
        <fragment
            android:id="@+id/fragment_drawer"
            android:layout_width="320dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:layout="@layout/fragment_navigation_drawer"
            android:name="com.example.sajal.camnav.NavigationDrawerFragment"
            tools:layout="@layout/fragment_navigation_drawer"/>

    </android.support.v4.widget.DrawerLayout>
</RelativeLayout>